--- a/app/views/blog/posts.html.twig
+++ b/app/views/blog/posts.html.twig
@@ -102,7 +102,7 @@
     </div>
 
     <!-- Pagination -->
-    {# <nav aria-label="Pagination">
+    <nav aria-label="Pagination">
       <hr class="my-0"/>
       <ul class="pagination justify-content-center my-4">
         <li class="page-item disabled">
@@ -127,6 +127,6 @@
           <a class="page-link" href="#!">Plus Ancien</a>
         </li>
       </ul>
-    </nav> #}
+    </nav>
   </div>
 {% endblock %}
