--- a/app/views/templates/adminLayout.html.twig
+++ b/app/views/templates/adminLayout.html.twig
@@ -29,7 +29,7 @@
         <!-- * * Tip * * You can use text or an image for your navbar brand.-->
         <!-- * * * * * * When using an image, we recommend the SVG format.-->
         <!-- * * * * * * Dimensions: Maximum height: 32px, maximum width: 240px-->
-        <a class="navbar-brand pe-3 ps-4 ps-lg-2" href="http://localhost/mon-blog/adminDashboard">Espace Admin</a>
+        <a class="navbar-brand pe-3 ps-4 ps-lg-2" href="/../mon-blog/adminDashboard">Espace Admin</a>
         <!-- Navbar Search Input-->
         <!-- * * Note: * * Visible only on and above the lg breakpoint-->
         <form class="form-inline me-auto d-none d-lg-block me-3">
@@ -95,7 +95,7 @@
               </h6>
               <!-- Example Message 1 -->
               <a class="dropdown-item dropdown-notifications-item" href="#!">
-                <img class="dropdown-notifications-item-img" src="public/assets/img/illustrations/profiles/profile-2.png"/>
+                <img class="dropdown-notifications-item-img" src="/../mon-blog/public/assets/img/illustrations/profiles/profile-2.png"/>
                 <div class="dropdown-notifications-item-content">
                   <div class="dropdown-notifications-item-content-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
                   <div class="dropdown-notifications-item-content-details">Thomas Wilcox · 58m</div>
@@ -107,11 +107,11 @@
           </li>
           <!-- User Dropdown-->
           <li class="nav-item dropdown no-caret dropdown-user me-3 me-lg-4">
-            <a class="btn btn-icon btn-transparent-dark dropdown-toggle" id="navbarDropdownUserImage" href="javascript:void(0);" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img class="img-fluid" src="public/assets/img/illustrations/profiles/profile-1.png"/></a>
+            <a class="btn btn-icon btn-transparent-dark dropdown-toggle" id="navbarDropdownUserImage" href="javascript:void(0);" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img class="img-fluid" src="/../mon-blog/public/assets/img/illustrations/profiles/profile-1.png"/></a>
             <div class="dropdown-menu dropdown-menu-end border-0 shadow animated--fade-in-up" aria-labelledby="navbarDropdownUserImage">
               {% if user is defined and user is not null %}
                 <h6 class="dropdown-header d-flex align-items-center">
-                  <img class="dropdown-user-img" src="public/assets/img/illustrations/profiles/profile-1.png"/>
+                  <img class="dropdown-user-img" src="/../mon-blog/public/assets/img/illustrations/profiles/profile-1.png"/>
                   <div class="dropdown-user-details">
 
                     <div class="dropdown-user-details-name">{{ user.userName }}</div>
@@ -126,7 +126,7 @@
                   </div>
                   Profile
                 </a>
-                <a class="dropdown-item" href="http://localhost/mon-blog/logout">
+                <a class="dropdown-item" href="/../mon-blog/logout">
                   <div class="dropdown-item-icon">
                     <i data-feather="log-out"></i>
                   </div>
