--- a/app/views/admin/contacts.html.twig
+++ b/app/views/admin/contacts.html.twig
@@ -27,7 +27,7 @@
   <div class="container-fluid px-4">
 
     {% block content %}
-      <div class="container">
+      <div class="container pt-5">
         <h1>Messages</h1>
 
         {% if contacts %}
