creating comment for the post

--- a/app/views/admin/dashboard.html.twig
+++ b/app/views/admin/dashboard.html.twig
@@ -14,7 +14,7 @@
           </h1>
         </div>
         <div class="col-12 col-xl-auto mb-3">
-          <a class="btn btn-sm btn-light text-primary" href="blog-management-create-post.html">
+          <a class="btn btn-sm btn-light text-primary" href="/../mon-blog/adminDashboard/blog-management&create-post">
             <i class="me-1" data-feather="plus"></i>
             Créer un Post
           </a>
@@ -37,7 +37,7 @@
                 <h5>Gérer les posts</h5>
                 <div class="text-muted small">Vous pouvez créer vos posts, les modifier, ou les supprimer</div>
               </div>
-              <img src="public/assets/img/illustrations/browser-stats.svg" alt="images de d'illustration" style="width: 8rem"/>
+              <img src="/../mon-blog/public/assets/img/illustrations/browser-stats.svg" alt="images de d'illustration" style="width: 8rem"/>
             </div>
           </div>
         </a>
@@ -52,7 +52,7 @@
                 <h5>Gérer les profils</h5>
                 <div class="text-muted small">Ajoutez et modifiez les profils d'autres administrateurs</div>
               </div>
-              <img src="public/assets/img/illustrations/processing.svg" alt="images de d'illustration" style="width: 8rem"/>
+              <img src="/../mon-blog/public/assets/img/illustrations/processing.svg" alt="images de d'illustration" style="width: 8rem"/>
             </div>
           </div>
         </a>
@@ -67,7 +67,7 @@
                 <h5>Gérer les messages</h5>
                 <div class="text-muted small">Consultez les messages laissés par les internautes</div>
               </div>
-              <img src="public/assets/img/illustrations/mails-1.svg" alt="images de d'illustration" style="width: 8rem"/>
+              <img src="/../mon-blog/public/assets/img/illustrations/mails-1.svg" alt="images de d'illustration" style="width: 8rem"/>
             </div>
           </div>
         </a>
@@ -87,7 +87,7 @@
                 </h1>
               </div>
               <div class="col-12 col-xl-auto mb-3">
-                <a class="btn btn-sm btn-light text-primary" href="http://localhost/mon-blog/blog-management&create-post">
+                <a class="btn btn-sm btn-light text-primary" href="/../mon-blog/adminDashboard/blog-management&create-post">
                   <i class="me-1" data-feather="plus"></i>
                   Créer un Post
                 </a>
@@ -122,10 +122,10 @@
                 <td>{{ post.updatedAt}}</td>
                 <td>{{ user.userName }}</td>
                 <td>
-                  <a class="btn btn-datatable btn-icon btn-transparent-dark me-2" href="http://localhost/mon-blog/blog-management-edit-post/{{ post.id }}">
+                  <a class="btn btn-datatable btn-icon btn-transparent-dark me-2" href="/../mon-blog/adminDashboard/blog-management-edit-post/{{ post.id }}">
                     <i data-feather="edit"></i>
                   </a>
-                  <a class="btn btn-datatable btn-icon btn-transparent-dark" href="http://localhost/mon-blog/blog-management-delete-post/{{ post.id }}">
+                  <a class="btn btn-datatable btn-icon btn-transparent-dark" href="/../mon-blog/adminDashboard/blog-management-delete-post/{{ post.id }}">
                     <i data-feather="trash-2"></i>
                   </a>
                 </td>
