--- a/app/views/admin/blog-management-create-post.html.twig
+++ b/app/views/admin/blog-management-create-post.html.twig
@@ -1,17 +1,6 @@
 {% extends 'templates/adminLayout.html.twig' %}
 {% set page = 'create-post' %}
-{# {% block head %}
-  <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-    <title>Mon Blog</title>
-    <link href="../public/css/adminStyles" rel="stylesheet"/>
-    <link rel="icon" type="image/x-icon" href="../public/assets/img/logo.png"/>
-  </head>
-{% endblock %} #}
+
 {% block mainHeader %}
   <div class="container-fluid px-4">
     <div class="page-header-content">
@@ -26,7 +15,7 @@
           <div class="page-header-subtitle">Créez vos posts via le formulaire ci-dessous</div>
         </div>
         <div class="col-12 col-xl-auto mb-3">
-          <a class="btn btn-sm btn-light text-primary" href="http://localhost/mon-blog/adminDashboard">
+          <a class="btn btn-sm btn-light text-primary" href="/../mon-blog/adminDashboard">
             <i class="me-1" data-feather="arrow-left"></i>
             Liste des Posts
           </a>
