delete rollback and transaction systeme for retriving data elemnents

--- a/app/views/admin/comments.html.twig
+++ b/app/views/admin/comments.html.twig
@@ -8,7 +8,7 @@
         <div class="col-auto mb-3">
           <h1 class="page-header-title">
             <div class="page-header-icon">
-              <i data-feather="list"></i>
+              <i data-feather="message-square"></i>
             </div>
             Commentaires
           </h1>
@@ -35,7 +35,7 @@
       </h1>
     </div>
     {% block content %}
-      <div class="card card-header-actions">
+      <div class="card card-header-actions col-lg-7 col-md col-sm">
         {% if comments %}
         {% for comment in comments %}
         <div class="card card-header-actions m-4">
