--- a/app/views/admin/contacts.html.twig
+++ b/app/views/admin/contacts.html.twig
@@ -7,7 +7,22 @@
         <div class="col-auto mb-3">
           <h1 class="page-header-title">
             <div class="page-header-icon">
-              <i data-feather="list"></i>
+              {# <i data-feather="list"></i> #}
+              <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <rect x="2" y="7" width="20" height="15" rx="2" ry="2" />
+              <polyline points="2 17 12 10 22 17" />
+              <polyline points="2 10 12 3 22 10" />
+            </svg>
             </div>
             Messagerie
           </h1>
@@ -34,12 +49,12 @@
       </h1>
     </div>
     {% block content %}
-      <div class="card card-header-actions  m-4">
+      <div class="card card-header-actions m-4 col-lg-7 col-md col-sm">
         {% if contacts %}
         {% for contact in contacts %}
-        <div class="card card-collapsable mb-4">
+        <div class="card card-collapsable m-4">
         {# <a class="small m-4" href="#">{{ contact.email }}</a> #}
-        <a class="card-header" href="#collapseCardExample" data-bs-toggle="collapse" role="button" aria-expanded="true" aria-controls="collapseCardExample">{{ contact.userName }} <br/>{{ contact.email }}
+      <a class="card-header text-info" href="#collapseCardExample" data-bs-toggle="collapse" role="button" aria-expanded="true" aria-controls="collapseCardExample">{{ contact.userName }} <br/><span class="small text-muted">{{ contact.email }}</span>
               <div class="card-collapsable-arrow">
                 <i class="fas fa-chevron-down"></i>
               </div>
