--- a/app/views/admin/contacts.html.twig
+++ b/app/views/admin/contacts.html.twig
@@ -54,7 +54,8 @@
         {% for contact in contacts %}
         <div class="card card-collapsable m-4">
         {# <a class="small m-4" href="#">{{ contact.email }}</a> #}
-      <a class="card-header text-info" href="#collapseCardExample" data-bs-toggle="collapse" role="button" aria-expanded="true" aria-controls="collapseCardExample">{{ contact.userName }} <br/><span class="small text-muted">{{ contact.email }}</span>
+      <a class="card-header text-info" href="#collapseCardExample" data-bs-toggle="collapse" role="button" aria-expanded="true" aria-controls="collapseCardExample"> <div class="text-info"><i class="fa fa-user-circle text-info" aria-hidden="true"></i>
+            {{ contact.userName }}</div><span class="small text-muted">{{ contact.email }}</span>
               <div class="card-collapsable-arrow">
                 <i class="fas fa-chevron-down"></i>
               </div>
@@ -62,6 +63,9 @@
             <div class="collapse show" id="collapseCardExample">
               <div class="card-body">
                 {{ contact.message }}
+              </div>
+              <div class="text-end m-5">Envoyé le : 
+                <span class="small text-muted">{{ contact.createdAt }}</span>
               </div>
             </div>
           </div>
