--- a/app/views/admin/comments.html.twig
+++ b/app/views/admin/comments.html.twig
@@ -44,13 +44,25 @@
         {% if comments %}
         {% for comment in comments %}
         <div class="card card-header-actions m-4">
-         <form class="" method="POST" enctype="multipart/form-data" action="/../mon-blog/adminDashboard/comments/{{ comment.id }}">
-         
+
+         <!-- Modal -->
+          <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+              <form class="modal-dialog" role="document" method="POST" enctype="multipart/form-data" action="/../mon-blog/adminDashboard/comments/{{ comment.id }}">
+                  <div class="modal-content">
+                      <div class="modal-header">
+                          <h5 class="modal-title" id="staticBackdropLabel">Voulez-vous supprimer ce commentaire ?</h5>
+                          <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">{{ comment.content }}</div>
+                      <div class="modal-footer"><button class="btn btn-secondary" type="button" data-bs-dismiss="modal">Non</button><button class="btn btn-danger" type="submit">Oui</button></div>
+                  </div>
+                </form>
+            </div>
             <div class="card-header nav-item dropdown no-caret dropdown-user"> 
               <div class="text-secondary"><i class="fa fa-user-circle text-secondary" aria-hidden="true"></i>
               {{ comment.authorName }}</div>
-            {# <a type="submit" href="/../mon-blog/adminDashboard/comment/{{ 1 }}/{{ comment.id }}" class="btn btn-danger btn-sm"> Retirer </a> #}
-            <button type="submit" class="btn btn-danger btn-sm"> Retirer </button>
+
+            <button class="btn btn-danger btn-sm" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Retirer</button>
             </div>
             <div class="card-body">
               {{ comment.content }}
@@ -58,11 +70,11 @@
             <div class="card-footer">
               <small>Ajouté le : {{ comment.createdAt }}</small>
             </div>
-          </form>
+          {# </form> #}
         </div>
         {% endfor %}
-        {# {% else %}
-          <p>Pas de commentaires disponible</p> #}
+        {% else %}
+          <p class="m-5">Pas de commentaires disponible</p>
         {% endif %}
 
         <!-- Pagination -->
