admin profil detail template

--- a/app/views/templates/adminLayout.html.twig
+++ b/app/views/templates/adminLayout.html.twig
@@ -130,8 +130,7 @@
                     </a>
                     <div class="collapse" id="pagesCollapseAccount" data-bs-parent="#accordionSidenavPagesMenu">
                       <nav class="sidenav-menu-nested nav">
-                        <a class="nav-link {% if page == 'account-detail' %}active{% endif %}" href="/../mon-blog/adminDashboard/account-detail">Détails du Profile</a>
-                        <a class="nav-link {% if page == 'edit-account' %}active{% endif %}" href="/../mon-blog/adminDashboard/edit-account">Modifier le Profile</a>
+                        <a class="nav-link {% if page == 'admin-profile' %}active{% endif %}" href="/../mon-blog/adminDashboard/admin-profile">Détails du Profile</a>
                         <a class="nav-link {% if page == 'create-admin' %}active{% endif %}" href="/../mon-blog/adminDashboard/create-admin">Créer un Admin</a>
                         <a class="nav-link {% if page == 'admin-list' %}active{% endif %}" href="/../mon-blog/adminDashboard/admin-list">Liste des Admin</a>
                       </nav>
