liste blog article template

--- a/app/views/templates/adminLayout.html.twig
+++ b/app/views/templates/adminLayout.html.twig
@@ -63,7 +63,7 @@
                   </div>
                 </h6>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#!">
+                <a class="dropdown-item" href="/../mon-blog/adminDashboard/admin-profile">
                   <div class="dropdown-item-icon">
                     <i data-feather="settings"></i>
                   </div>
