--- a/app/views/blog/contact.html.twig
+++ b/app/views/blog/contact.html.twig
@@ -9,7 +9,7 @@
         <div class="row gx-5 justify-content-center">
           <div class="col-lg-8">
             <h1 class="page-header-ui-title mb-3">Contactez moi</h1>
-            <p class="page-header-ui-text">Pour plus de détail sur mon parcours</p>
+            <p class="page-header-ui-text">Pour plus d'informations</p>
           </div>
         </div>
       </div>
