--- a/app/views/blog/post.html.twig
+++ b/app/views/blog/post.html.twig
@@ -1,100 +1,66 @@
-{% extends 'templates/layout.html.twig' %}
+{% extends 'templates/blogLayout.html.twig' %}
 
-{% block head %}
-  <head>
-    <meta charset="utf-8"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-    <title>{{ title }}</title>
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="../public/assets/favicon.ico"/>
+{% set page = 'post' %}
 
-    <!-- font-awesome icon-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+{% block header %}
 
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="../public/css/booststrapStyles.css" rel="stylesheet"/>
-    <link href="../public/css/myStyles.css" rel="stylesheet"/>
-  {% endblock %}
+{% endblock %}
 
-  {% block header_title %}
-    {{ post.title }}
-  {% endblock %}
-
-  {% block header_description %}
-    {# Découvrez nos derniers articles et restez informé de nos activités. #}
-  {% endblock %}
-
-  {% block content %}
-    <div class="container-fluid p-0">
-      <img class="card-img-top" src="http://localhost/mon-blog/public/assets/img/postImg/{{ post.imageUrl }}" alt="Post image"/>
-      <div class="container mt-5">
-        {% if post %}
-          <div class="mb-4">
-            <h3 class="card-title">
-              {{ post.title }}</h3>
-            <div class="card-body">
-              <p class="card-text">{{ post.content }}</p>
-              <div class="small text-muted">Date de publication:
-                {{ post.createdAt }}</div>
-              <div class="small text-muted">Date de mise à jour:
-                {{ post.updatedAt }}</div>
-              <br>
-              <blockquote class="blockquote mb-0">
-                <footer class="blockquote-footer">Auteur :
-                  <cite title="Source Title">{{ post.authorRole }}</cite>
-                </footer>
-              </blockquote>
+{% block section %}
+  <div class="container px-5">
+    <div class="row gx-5 justify-content-center">
+      <div class="col-lg-10 col-xl-8">
+        <div class="single-post">
+          <h1>Boots on the Ground, Inclusive Thought Provoking Ideas</h1>
+          <p class="lead">Empower communities and energize engaging ideas; scale and impact do-gooders while disruptring industries. Venture philanthropy benefits corporations and people by moving the needle.</p>
+          <div class="d-flex align-items-center justify-content-between mb-5">
+            <div class="single-post-meta me-4">
+              <img class="single-post-meta-img" src="assets/img/illustrations/profiles/profile-1.png"/>
+              <div class="single-post-meta-details">
+                <div class="single-post-meta-details-name">Valerie Luna</div>
+                <div class="single-post-meta-details-date">Feb 5 &middot; 6 min read</div>
+              </div>
+            </div>
+            <div class="single-post-meta-links">
+              <a href="#!">
+                <i class="fab fa-twitter fa-fw"></i>
+              </a>
+              <a href="#!">
+                <i class="fab fa-facebook-f fa-fw"></i>
+              </a>
+              <a href="#!">
+                <i class="fas fa-bookmark fa-fw"></i>
+              </a>
             </div>
           </div>
-
-          {% if user is defined and user is not null %}
-            <form class="mt-5" method="POST">
-              <div class="mb-3">
-                <label for="validationTextarea" class="form-label">Laissez nous votre commentaire</label>
-                <input type="hidden" name="article_id" value="{{ post.id }}">
-                <textarea class="form-control" id="validationTextarea" name="content" rows="3" cols="50" placeholder="Ajouter un commentaire" required="required"></textarea>
-                <button type="submit" class="btn btn-success mt-2" value="Envoyer">Envoyer</button>
-              </div>
-            </form>
-          {% else %}
-            <p>Pour laissez nous votre commentaire vous devez être connecté ! Si non inscrivez vous pour vous connecter celà vous prendra 2 min</p>
-            <a href="http://localhost/mon-blog/login" class="btn btn-success btn-sm">Je me connecte</a>
-            <a href="http://localhost/mon-blog/register" class="btn btn-secondary btn-sm">Je suis nouveau</a>
-
-          {% endif %}
-        {% endif %}
-
-  {% if comments %}
-    <div class="container mt-5">
-      <h5 class="text-body-secondary">
-        {{ comments|length }} Commentaires pour ce post
-      </h5>
-    </div>
-  {% for comment in comments %}
-    <div class="col-lg-6 col-md col-sm list-group m-4">
-      <div class="list-group-item list-group-item-action">
-          <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">{{ comment.authorName }}</h5>
-            <small class="text-body-secondary">{{ comment.authorName }}</small>
+          <img class="img-fluid mb-2 rounded" src="https://source.unsplash.com/vZJdYl5JVXY/990x540"/>
+          <div class="small text-gray-500 text-center">Photo Credit: Unsplash</div>
+          <div class="single-post-text my-5">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit similique distinctio quidem blanditiis architecto ullam a itaque quisquam nihil! Unde ducimus deleniti exercitationem minima, molestiae ab saepe libero. Doloribus, a?</p>
+            <p>Magnam amet labore exercitationem maxime consectetur molestias quas quia dicta, praesentium minus illum quis fuga, fugiat velit voluptate sed nostrum ipsam atque.</p>
+            <p>Quaerat voluptas natus velit deleniti reprehenderit vero ad eos ab reiciendis. Libero dignissimos temporibus ipsam sint dolores voluptate consequatur debitis tempora doloremque.</p>
+            <h4>Creating Something New</h4>
+            <p>Laborum placeat quas accusantium vitae perferendis dolores possimus tempora, qui consectetur hic ullam autem. Enim, rerum obcaecati numquam quaerat necessitatibus voluptatem? Repellat!</p>
+            <p>Quasi, quos quaerat? Sint at odit possimus ullam saepe suscipit officiis nobis eaque, laudantium ut earum tempore repellendus mollitia odio nam! Unde?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi explicabo unde perferendis reprehenderit ullam nobis? Laborum amet voluptatem sunt natus? Tempore commodi corporis accusamus laudantium assumenda blanditiis aut nobis culpa.</p>
+            <h4>It's time to build your new project</h4>
+            <p>Facilis enim voluptatibus qui voluptatum nemo non, facere, fugiat deserunt dicta ab sunt in sequi, assumenda nobis ipsam quidem corporis. Nemo, aliquam.</p>
+            <p>Illum numquam sapiente debitis similique, a accusantium quisquam recusandae! Nihil quia nulla blanditiis. Nobis numquam iure facilis consequuntur beatae eos adipisci doloremque!</p>
+            <p>Voluptate reiciendis nisi tempora laboriosam commodi sequi sapiente natus aut ab, cum aspernatur illo. Nobis laboriosam excepturi iste earum. Error, ab eius?</p>
+            <p>Quam, nesciunt iusto, praesentium amet necessitatibus quod porro libero voluptates soluta nostrum quisquam delectus repellendus totam accusamus sint magni dolore atque qui.</p>
+            <img class="img-fluid mb-2 rounded" src="https://source.unsplash.com/sv8oOQaUb-o/990x540"/>
+            <div class="small text-gray-500 text-center">Photo Credit: Unsplash</div>
+            <h4>It's time to build your new project</h4>
+            <p>Laborum placeat quas accusantium vitae perferendis dolores possimus tempora, qui consectetur hic ullam autem. Enim, rerum obcaecati numquam quaerat necessitatibus voluptatem? Repellat!</p>
+            <p>Quasi, quos quaerat? Sint at odit possimus ullam saepe suscipit officiis nobis eaque, laudantium ut earum tempore repellendus mollitia odio nam! Unde?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi explicabo unde perferendis reprehenderit ullam nobis? Laborum amet voluptatem sunt natus? Tempore commodi corporis accusamus laudantium assumenda blanditiis aut nobis culpa.</p>
+            <hr class="my-5"/>
+            <div class="text-center">
+              <a class="btn btn-transparent-dark" href="page-blog-overview.html">Back to Blog Overview</a>
+            </div>
           </div>
-        <p class="mb-1">{{ comment.content }}</p>
-        <small class="text-body-secondary">Commentaire ajouté le :
-          {{ comment.createdAt }}</small>
+        </div>
       </div>
     </div>
-  {% endfor %}
-{% else %}
-  <p>0 commentaire pour ce post. Nous apprécions vos retours</p>
-{% endif %}
-
-      </div>
-    </div>
-  {% endblock %}
-
-  {% block JsLink %}
-    <!-- Core theme JS-->
-    <script src="../public/js/scripts.js"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="public/js/passwordShow.js"></script>
-  {% endblock %}
+  </div>
+{% endblock %}
